k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ticketer
  labels:
    name: ticketer
    environment: production
